[project]
name = "carro-financeiro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.43.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "cachetools>=5.5.2",
]

[tool.streamlit]
browser.gatherUsageStats = false
server.maxUploadSize = 5
server.enableXsrfProtection = false
server.enableCORS = false
