[project]
name = "carrofinanceiro"
version = "0.1.0"
description = "Gerenciador de veículos e manutenções"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.43.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "cachetools>=5.5.2"
]

[tool.poetry]
name = "carrofinanceiro"
version = "0.1.0"
description = "Gerenciamento Financeiro de Veículos"
authors = ["Seu Nome <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.43.2"
pandas = "^2.2.3"
requests = "^2.32.3"
Pillow = "^11.1.0"
cachetools = "^5.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.streamlit]
browser.gatherUsageStats = false
server.maxUploadSize = 5
server.enableXsrfProtection = false
server.enableCORS = false
