[project]
name = "carrofinanceiro"
version = "0.1.0"
description = "Gerenciador de veículos e manutenções"
authors = [
    {name = "Antonio"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.43.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "cachetools>=5.5.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ["."]
include = ["carrofinanceiro*"]

[tool.streamlit]
browser.gatherUsageStats = false
server.maxUploadSize = 5
server.enableXsrfProtection = false
server.enableCORS = false
